fix: hide category carousel scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,4 +38,15 @@
     @apply lg:max-w-[1400px] xl:max-w-[1600px];
     @apply mx-auto;
   }
+
+  .scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+  }
 }
